Opened 13 years ago

Closed 13 years ago

#8857 closed bug (fixed)

Various build fixes for Darwin

Reported by: nielx Owned by: jscipione
Priority: normal Milestone: R1
Component: Build System Version: R1/Development
Keywords: darwin Cc:
Blocked By: Blocking:
Platform: All

Description

While building the package-management branch I came across various issues with the build layer for Darwin.

I attached several patches:

  • Fix for symlinkat
  • Move fs_darwin.h to headers/build/host
  • Add fdopendir

Attachments (3)

Change History (5)

comment:1 by nielx, 13 years ago

patch: 01

comment:2 by jscipione, 13 years ago

Resolution: fixed
Status: newclosed

Patches 1 and 3 implemented in hrev44515, patch 2 in hrev44516. Thanks nielx

Note: See TracTickets for help on using tickets.