Add fopendir() to fs_darwin.cpp and fix symlinkat().

This completes 2/3 of #8857 and is courtesy of nielx.